parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> def_vars functions MAIN block
Rule 2     functions -> DEF type_fun ID LPARENTHESIS param RPARENTHESIS block functions
Rule 3     functions -> empty
Rule 4     param -> type ID COMMA param
Rule 5     param -> type ID
Rule 6     param -> empty
Rule 7     block -> LCURLY_BRACKET content_block RCURLY_BRACKET
Rule 8     content_block -> statment content_block
Rule 9     content_block -> empty
Rule 10    statment -> def_vars
Rule 11    statment -> assignment SEMICOLON
Rule 12    statment -> condition
Rule 13    statment -> while_loop
Rule 14    statment -> for_loop
Rule 15    statment -> function_call SEMICOLON
Rule 16    statment -> write_function
Rule 17    statment -> RETURN expression SEMICOLON
Rule 18    statment -> RETURN SEMICOLON
Rule 19    statment -> read_function
Rule 20    def_vars -> VAR type vars_n SEMICOLON def_vars
Rule 21    def_vars -> empty
Rule 22    vars_n -> ID COMMA vars_n
Rule 23    vars_n -> ID
Rule 24    vars_n -> ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET
Rule 25    vars_n -> ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET
Rule 26    assignment -> var ASSIGN expression
Rule 27    condition -> IF LPARENTHESIS expression RPARENTHESIS block condition_else
Rule 28    condition_else -> ELIF LPARENTHESIS expression RPARENTHESIS block condition_else
Rule 29    condition_else -> ELSE block
Rule 30    condition_else -> empty
Rule 31    while_loop -> WHILE LPARENTHESIS expression RPARENTHESIS block
Rule 32    while_loop -> DO block WHILE LPARENTHESIS expression RPARENTHESIS SEMICOLON
Rule 33    for_loop -> FOR LPARENTHESIS for_param1 for_param2 for_param3 RPARENTHESIS block
Rule 34    for_param1 -> assignment SEMICOLON
Rule 35    for_param2 -> expression SEMICOLON
Rule 36    for_param3 -> assignment
Rule 37    function_call -> ID LPARENTHESIS fun_param RPARENTHESIS
Rule 38    fun_param -> expression COMMA fun_param
Rule 39    fun_param -> expression
Rule 40    write_function -> PRINT LPARENTHESIS write RPARENTHESIS SEMICOLON
Rule 41    write -> expression COMMA write
Rule 42    write -> expression
Rule 43    read_function -> READ LPARENTHESIS read RPARENTHESIS SEMICOLON
Rule 44    read -> expression COMMA read
Rule 45    read -> expression
Rule 46    expression -> exp_or
Rule 47    expression -> expression logical_or exp_or
Rule 48    exp_or -> exp_and
Rule 49    exp_or -> exp_or logical_and exp_and
Rule 50    exp_and -> exp_not
Rule 51    exp_and -> exp_and logical_not exp_not
Rule 52    exp_not -> exp
Rule 53    exp_not -> exp relational_l1 term
Rule 54    exp_not -> exp relational_l2 term
Rule 55    exp -> term
Rule 56    exp -> term arithmetic_l1 exp
Rule 57    term -> factor
Rule 58    term -> factor arithmetic_l2 term
Rule 59    factor -> LPARENTHESIS expression RPARENTHESIS
Rule 60    factor -> const_var
Rule 61    factor -> function_call
Rule 62    factor -> var
Rule 63    arithmetic_l1 -> PLUS
Rule 64    arithmetic_l1 -> MINUS
Rule 65    arithmetic_l2 -> TIMES
Rule 66    arithmetic_l2 -> DIVIDE
Rule 67    relational_l1 -> EQUALS
Rule 68    relational_l1 -> NOT_EQUALS
Rule 69    relational_l2 -> LT
Rule 70    relational_l2 -> GT
Rule 71    relational_l2 -> LTE
Rule 72    relational_l2 -> GTE
Rule 73    logical_or -> BOOL_OR
Rule 74    logical_and -> BOOL_AND
Rule 75    logical_not -> BOOL_NOT
Rule 76    const_var -> CONST_INT
Rule 77    const_var -> CONST_FLOAT
Rule 78    const_var -> CONST_STRING
Rule 79    var -> ID
Rule 80    var -> ID LSQUARE_BRACKET expression RSQUARE_BRACKET
Rule 81    var -> ID LSQUARE_BRACKET expression RSQUARE_BRACKET LSQUARE_BRACKET expression RSQUARE_BRACKET
Rule 82    type -> INT
Rule 83    type -> FLOAT
Rule 84    type -> STRING
Rule 85    type_fun -> type
Rule 86    type_fun -> VOID
Rule 87    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 26
BOOL_AND             : 74
BOOL_NOT             : 75
BOOL_OR              : 73
COMMA                : 4 22 38 41 44
CONST_FLOAT          : 77
CONST_INT            : 24 25 25 76
CONST_STRING         : 78
DEF                  : 2
DIVIDE               : 66
DO                   : 32
ELIF                 : 28
ELSE                 : 29
EQUALS               : 67
FLOAT                : 83
FOR                  : 33
GT                   : 70
GTE                  : 72
ID                   : 2 4 5 22 23 24 25 37 79 80 81
IF                   : 27
INT                  : 82
LCURLY_BRACKET       : 7
LPARENTHESIS         : 2 27 28 31 32 33 37 40 43 59
LSQUARE_BRACKET      : 24 25 25 80 81 81
LT                   : 69
LTE                  : 71
MAIN                 : 1
MINUS                : 64
NOT_EQUALS           : 68
PLUS                 : 63
PRINT                : 40
RCURLY_BRACKET       : 7
READ                 : 43
RETURN               : 17 18
RPARENTHESIS         : 2 27 28 31 32 33 37 40 43 59
RSQUARE_BRACKET      : 24 25 25 80 81 81
SEMICOLON            : 11 15 17 18 20 32 34 35 40 43
STRING               : 84
TIMES                : 65
VAR                  : 20
VOID                 : 86
WHILE                : 31 32
error                : 

Nonterminals, with rules where they appear

arithmetic_l1        : 56
arithmetic_l2        : 58
assignment           : 11 34 36
block                : 1 2 27 28 29 31 32 33
condition            : 12
condition_else       : 27 28
const_var            : 60
content_block        : 7 8
def_vars             : 1 10 20
empty                : 3 6 9 21 30
exp                  : 52 53 54 56
exp_and              : 48 49 51
exp_not              : 50 51
exp_or               : 46 47 49
expression           : 17 26 27 28 31 32 35 38 39 41 42 44 45 47 59 80 81 81
factor               : 57 58
for_loop             : 14
for_param1           : 33
for_param2           : 33
for_param3           : 33
fun_param            : 37 38
function_call        : 15 61
functions            : 1 2
logical_and          : 49
logical_not          : 51
logical_or           : 47
param                : 2 4
program              : 0
read                 : 43 44
read_function        : 19
relational_l1        : 53
relational_l2        : 54
statment             : 8
term                 : 53 54 55 56 58
type                 : 4 5 20 85
type_fun             : 2
var                  : 26 62
vars_n               : 20 22
while_loop           : 13
write                : 40 41
write_function       : 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . def_vars functions MAIN block
    (20) def_vars -> . VAR type vars_n SEMICOLON def_vars
    (21) def_vars -> . empty
    (87) empty -> .

    VAR             shift and go to state 3
    DEF             reduce using rule 87 (empty -> .)
    MAIN            reduce using rule 87 (empty -> .)

    program                        shift and go to state 1
    def_vars                       shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> def_vars . functions MAIN block
    (2) functions -> . DEF type_fun ID LPARENTHESIS param RPARENTHESIS block functions
    (3) functions -> . empty
    (87) empty -> .

    DEF             shift and go to state 6
    MAIN            reduce using rule 87 (empty -> .)

    functions                      shift and go to state 5
    empty                          shift and go to state 7

state 3

    (20) def_vars -> VAR . type vars_n SEMICOLON def_vars
    (82) type -> . INT
    (83) type -> . FLOAT
    (84) type -> . STRING

    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    type                           shift and go to state 8

state 4

    (21) def_vars -> empty .

    DEF             reduce using rule 21 (def_vars -> empty .)
    MAIN            reduce using rule 21 (def_vars -> empty .)
    RETURN          reduce using rule 21 (def_vars -> empty .)
    VAR             reduce using rule 21 (def_vars -> empty .)
    IF              reduce using rule 21 (def_vars -> empty .)
    WHILE           reduce using rule 21 (def_vars -> empty .)
    DO              reduce using rule 21 (def_vars -> empty .)
    FOR             reduce using rule 21 (def_vars -> empty .)
    ID              reduce using rule 21 (def_vars -> empty .)
    PRINT           reduce using rule 21 (def_vars -> empty .)
    READ            reduce using rule 21 (def_vars -> empty .)
    RCURLY_BRACKET  reduce using rule 21 (def_vars -> empty .)


state 5

    (1) program -> def_vars functions . MAIN block

    MAIN            shift and go to state 12


state 6

    (2) functions -> DEF . type_fun ID LPARENTHESIS param RPARENTHESIS block functions
    (85) type_fun -> . type
    (86) type_fun -> . VOID
    (82) type -> . INT
    (83) type -> . FLOAT
    (84) type -> . STRING

    VOID            shift and go to state 15
    INT             shift and go to state 9
    FLOAT           shift and go to state 10
    STRING          shift and go to state 11

    type_fun                       shift and go to state 13
    type                           shift and go to state 14

state 7

    (3) functions -> empty .

    MAIN            reduce using rule 3 (functions -> empty .)


state 8

    (20) def_vars -> VAR type . vars_n SEMICOLON def_vars
    (22) vars_n -> . ID COMMA vars_n
    (23) vars_n -> . ID
    (24) vars_n -> . ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET
    (25) vars_n -> . ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET

    ID              shift and go to state 17

    vars_n                         shift and go to state 16

state 9

    (82) type -> INT .

    ID              reduce using rule 82 (type -> INT .)


state 10

    (83) type -> FLOAT .

    ID              reduce using rule 83 (type -> FLOAT .)


state 11

    (84) type -> STRING .

    ID              reduce using rule 84 (type -> STRING .)


state 12

    (1) program -> def_vars functions MAIN . block
    (7) block -> . LCURLY_BRACKET content_block RCURLY_BRACKET

    LCURLY_BRACKET  shift and go to state 19

    block                          shift and go to state 18

state 13

    (2) functions -> DEF type_fun . ID LPARENTHESIS param RPARENTHESIS block functions

    ID              shift and go to state 20


state 14

    (85) type_fun -> type .

    ID              reduce using rule 85 (type_fun -> type .)


state 15

    (86) type_fun -> VOID .

    ID              reduce using rule 86 (type_fun -> VOID .)


state 16

    (20) def_vars -> VAR type vars_n . SEMICOLON def_vars

    SEMICOLON       shift and go to state 21


state 17

    (22) vars_n -> ID . COMMA vars_n
    (23) vars_n -> ID .
    (24) vars_n -> ID . LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET
    (25) vars_n -> ID . LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET

    COMMA           shift and go to state 22
    SEMICOLON       reduce using rule 23 (vars_n -> ID .)
    LSQUARE_BRACKET shift and go to state 23


state 18

    (1) program -> def_vars functions MAIN block .

    $end            reduce using rule 1 (program -> def_vars functions MAIN block .)


state 19

    (7) block -> LCURLY_BRACKET . content_block RCURLY_BRACKET
    (8) content_block -> . statment content_block
    (9) content_block -> . empty
    (10) statment -> . def_vars
    (11) statment -> . assignment SEMICOLON
    (12) statment -> . condition
    (13) statment -> . while_loop
    (14) statment -> . for_loop
    (15) statment -> . function_call SEMICOLON
    (16) statment -> . write_function
    (17) statment -> . RETURN expression SEMICOLON
    (18) statment -> . RETURN SEMICOLON
    (19) statment -> . read_function
    (87) empty -> .
    (20) def_vars -> . VAR type vars_n SEMICOLON def_vars
    (21) def_vars -> . empty
    (26) assignment -> . var ASSIGN expression
    (27) condition -> . IF LPARENTHESIS expression RPARENTHESIS block condition_else
    (31) while_loop -> . WHILE LPARENTHESIS expression RPARENTHESIS block
    (32) while_loop -> . DO block WHILE LPARENTHESIS expression RPARENTHESIS SEMICOLON
    (33) for_loop -> . FOR LPARENTHESIS for_param1 for_param2 for_param3 RPARENTHESIS block
    (37) function_call -> . ID LPARENTHESIS fun_param RPARENTHESIS
    (40) write_function -> . PRINT LPARENTHESIS write RPARENTHESIS SEMICOLON
    (43) read_function -> . READ LPARENTHESIS read RPARENTHESIS SEMICOLON
    (79) var -> . ID
    (80) var -> . ID LSQUARE_BRACKET expression RSQUARE_BRACKET
    (81) var -> . ID LSQUARE_BRACKET expression RSQUARE_BRACKET LSQUARE_BRACKET expression RSQUARE_BRACKET

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
    RETURN          shift and go to state 34
    RCURLY_BRACKET  reduce using rule 87 (empty -> .)
    VAR             shift and go to state 3
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    DO              shift and go to state 39
    FOR             shift and go to state 40
    ID              shift and go to state 41
    PRINT           shift and go to state 42
    READ            shift and go to state 43

  ! RETURN          [ reduce using rule 87 (empty -> .) ]
  ! VAR             [ reduce using rule 87 (empty -> .) ]
  ! IF              [ reduce using rule 87 (empty -> .) ]
  ! WHILE           [ reduce using rule 87 (empty -> .) ]
  ! DO              [ reduce using rule 87 (empty -> .) ]
  ! FOR             [ reduce using rule 87 (empty -> .) ]
  ! ID              [ reduce using rule 87 (empty -> .) ]
  ! PRINT           [ reduce using rule 87 (empty -> .) ]
  ! READ            [ reduce using rule 87 (empty -> .) ]

    content_block                  shift and go to state 24
    statment                       shift and go to state 25
    empty                          shift and go to state 26
    def_vars                       shift and go to state 27
    assignment                     shift and go to state 28
    condition                      shift and go to state 29
    while_loop                     shift and go to state 30
    for_loop                       shift and go to state 31
    function_call                  shift and go to state 32
    write_function                 shift and go to state 33
    read_function                  shift and go to state 35
    var                            shift and go to state 36

state 20

    (2) functions -> DEF type_fun ID . LPARENTHESIS param RPARENTHESIS block functions

    LPARENTHESIS    shift and go to state 44


state 21

    (20) def_vars -> VAR type vars_n SEMICOLON . def_vars
    (20) def_vars -> . VAR type vars_n SEMICOLON def_vars
    (21) def_vars -> . empty
    (87) empty -> .

  ! shift/reduce conflict for VAR resolved as shift
    VAR             shift and go to state 3
    DEF             reduce using rule 87 (empty -> .)
    MAIN            reduce using rule 87 (empty -> .)
    RETURN          reduce using rule 87 (empty -> .)
    IF              reduce using rule 87 (empty -> .)
    WHILE           reduce using rule 87 (empty -> .)
    DO              reduce using rule 87 (empty -> .)
    FOR             reduce using rule 87 (empty -> .)
    ID              reduce using rule 87 (empty -> .)
    PRINT           reduce using rule 87 (empty -> .)
    READ            reduce using rule 87 (empty -> .)
    RCURLY_BRACKET  reduce using rule 87 (empty -> .)

  ! VAR             [ reduce using rule 87 (empty -> .) ]

    def_vars                       shift and go to state 45
    empty                          shift and go to state 4

state 22

    (22) vars_n -> ID COMMA . vars_n
    (22) vars_n -> . ID COMMA vars_n
    (23) vars_n -> . ID
    (24) vars_n -> . ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET
    (25) vars_n -> . ID LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET

    ID              shift and go to state 17

    vars_n                         shift and go to state 46

state 23

    (24) vars_n -> ID LSQUARE_BRACKET . CONST_INT RSQUARE_BRACKET
    (25) vars_n -> ID LSQUARE_BRACKET . CONST_INT RSQUARE_BRACKET LSQUARE_BRACKET CONST_INT RSQUARE_BRACKET

    CONST_INT       shift and go to state 47


state 24

    (7) block -> LCURLY_BRACKET content_block . RCURLY_BRACKET

    RCURLY_BRACKET  shift and go to state 48


state 25

    (8) content_block -> statment . content_block
    (8) content_block -> . statment content_block
    (9) content_block -> . empty
    (10) statment -> . def_vars
    (11) statment -> . assignment SEMICOLON
    (12) statment -> . condition
    (13) statment -> . while_loop
    (14) statment -> . for_loop
    (15) statment -> . function_call SEMICOLON
    (16) statment -> . write_function
    (17) statment -> . RETURN expression SEMICOLON
    (18) statment -> . RETURN SEMICOLON
    (19) statment -> . read_function
    (87) empty -> .
    (20) def_vars -> . VAR type vars_n SEMICOLON def_vars
    (21) def_vars -> . empty
    (26) assignment -> . var ASSIGN expression
    (27) condition -> . IF LPARENTHESIS expression RPARENTHESIS block condition_else
    (31) while_loop -> . WHILE LPARENTHESIS expression RPARENTHESIS block
    (32) while_loop -> . DO block WHILE LPARENTHESIS expression RPARENTHESIS SEMICOLON
    (33) for_loop -> . FOR LPARENTHESIS for_param1 for_param2 for_param3 RPARENTHESIS block
    (37) function_call -> . ID LPARENTHESIS fun_param RPARENTHESIS
    (40) write_function -> . PRINT LPARENTHESIS write RPARENTHESIS SEMICOLON
    (43) read_function -> . READ LPARENTHESIS read RPARENTHESIS SEMICOLON
    (79) var -> . ID
    (80) var -> . ID LSQUARE_BRACKET expression RSQUARE_BRACKET
    (81) var -> . ID LSQUARE_BRACKET expression RSQUARE_BRACKET LSQUARE_BRACKET expression RSQUARE_BRACKET

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
    RETURN          shift and go to state 34
    RCURLY_BRACKET  reduce using rule 87 (empty -> .)
    VAR             shift and go to state 3
    IF              shift and go to state 37
    WHILE           shift and go to state 38
    DO              shift and go to state 39
    FOR             shift and go to state 40
    ID              shift and go to state 41
    PRINT           shift and go to state 42
    READ            shift and go to state 43

  ! RETURN          [ reduce using rule 87 (empty -> .) ]
  ! VAR             [ reduce using rule 87 (empty -> .) ]
  ! IF              [ reduce using rule 87 (empty -> .) ]
  ! WHILE           [ reduce using rule 87 (empty -> .) ]
  ! DO              [ reduce using rule 87 (empty -> .) ]
  ! FOR             [ reduce using rule 87 (empty -> .) ]
  ! ID              [ reduce using rule 87 (empty -> .) ]
  ! PRINT           [ reduce using rule 87 (empty -> .) ]
  ! READ            [ reduce using rule 87 (empty -> .) ]

    statment                       shift and go to state 25
    content_block                  shift and go to state 49
    empty                          shift and go to state 26
    def_vars                       shift and go to state 27
    assignment                     shift and go to state 28
    condition                      shift and go to state 29
    while_loop                     shift and go to state 30
    for_loop                       shift and go to state 31
    function_call                  shift and go to state 32
    write_function                 shift and go to state 33
    read_function                  shift and go to state 35
    var                            shift and go to state 36

state 26

    (9) content_block -> empty .
    (21) def_vars -> empty .

  ! reduce/reduce conflict for RCURLY_BRACKET resolved using rule 9 (content_block -> empty .)
    RCURLY_BRACKET  reduce using rule 9 (content_block -> empty .)
    RETURN          reduce using rule 21 (def_vars -> empty .)
    VAR             reduce using rule 21 (def_vars -> empty .)
    IF              reduce using rule 21 (def_vars -> empty .)
    WHILE           reduce using rule 21 (def_vars -> empty .)
    DO              reduce using rule 21 (def_vars -> empty .)
    FOR             reduce using rule 21 (def_vars -> empty .)
    ID              reduce using rule 21 (def_vars -> empty .)
    PRINT           reduce using rule 21 (def_vars -> empty .)
    READ            reduce using rule 21 (def_vars -> empty .)

  ! RCURLY_BRACKET  [ reduce using rule 21 (def_vars -> empty .) ]


state 27

    (10) statment -> def_vars .

    RETURN          reduce using rule 10 (statment -> def_vars .)
    VAR             reduce using rule 10 (statment -> def_vars .)
    IF              reduce using rule 10 (statment -> def_vars .)
    WHILE           reduce using rule 10 (statment -> def_vars .)
    DO              reduce using rule 10 (statment -> def_vars .)
    FOR             reduce using rule 10 (statment -> def_vars .)
    ID              reduce using rule 10 (statment -> def_vars .)
    PRINT           reduce using rule 10 (statment -> def_vars .)
    READ            reduce using rule 10 (statment -> def_vars .)
    RCURLY_BRACKET  reduce using rule 10 (statment -> def_vars .)


state 28

    (11) statment -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 50


state 29

    (12) statment -> condition .
